--- a/PagesMovie/PagesMovie/Pages/Index.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "首页";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">学习ASP.NET 测试用</h1>
+    <p>从 <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a> 中学习.</p>
 </div>
