--- a/PagesMovie/PagesMovie/Pages/Privacy.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Privacy.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "隐私";
 }
-<h1>@ViewData["Title"]</h1>
+<h1>隐私政策</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>暂无隐私政策.</p>
