--- a/PagesMovie/PagesMovie/Pages/Movies/Create.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Movies/Create.cshtml
@@ -2,12 +2,12 @@
 @model PagesMovie.Pages.Movies.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "新建";
 }
 
-<h1>Create</h1>
+<h1>新建</h1>
 
-<h4>Movie</h4>
+<h4>电影</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,14 +34,19 @@
                 <span asp-validation-for="Movie.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="Movie.Rating" class="control-label"></label>
+                <input asp-for="Movie.Rating" class="form-control" />
+                <span asp-validation-for="Movie.Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="新建" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">返回列表</a>
 </div>
 
 @section Scripts {
