--- a/PagesMovie/PagesMovie/Pages/Movies/Delete.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Movies/Delete.cshtml
@@ -2,14 +2,14 @@
 @model PagesMovie.Pages.Movies.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "删除";
 }
 
-<h1>Delete</h1>
+<h1>删除</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>是否确定删除该电影?</h3>
 <div>
-    <h4>Movie</h4>
+    <h4>电影</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -36,11 +36,17 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Movie.Rating)
+        </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Movie.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="删除" class="btn btn-danger" /> |
+        <a asp-page="./Index">返回列表</a>
     </form>
 </div>
