--- a/PagesMovie/PagesMovie/Pages/Movies/Details.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Movies/Details.cshtml
@@ -2,13 +2,13 @@
 @model PagesMovie.Pages.Movies.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "详情";
 }
 
-<h1>Details</h1>
+<h1>详情</h1>
 
 <div>
-    <h4>Movie</h4>
+    <h4>电影</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -35,9 +35,15 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Movie.Rating)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Movie.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Movie.ID">编辑</a> |
+    <a asp-page="./Index">返回列表</a>
 </div>
