--- a/PagesMovie/PagesMovie/Pages/Movies/Edit.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Movies/Edit.cshtml
@@ -2,12 +2,12 @@
 @model PagesMovie.Pages.Movies.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "编辑";
 }
 
-<h1>Edit</h1>
+<h1>编辑</h1>
 
-<h4>Movie</h4>
+<h4>电影</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,14 +35,19 @@
                 <span asp-validation-for="Movie.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Movie.Rating" class="control-label"></label>
+                <input asp-for="Movie.Rating" class="form-control" />
+                <span asp-validation-for="Movie.Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="保存" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">返回列表</a>
 </div>
 
 @section Scripts {
