--- a/PagesMovie/PagesMovie/Pages/Movies/Index.cshtml
+++ b/PagesMovie/PagesMovie/Pages/Movies/Index.cshtml
@@ -2,14 +2,25 @@
 @model PagesMovie.Pages.Movies.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "列表";
 }
 
-<h1>Index</h1>
+<h1>电影列表</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">新建电影</a>
 </p>
+
+<form>
+    <p>
+        <select asp-for="MovieGenre" asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
+        电影名: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="查找" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -24,6 +35,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movie[0].Rating)
             </th>
             <th></th>
         </tr>
@@ -44,9 +58,12 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.ID">编辑</a> |
+                <a asp-page="./Details" asp-route-id="@item.ID">详情</a> |
+                <a asp-page="./Delete" asp-route-id="@item.ID">删除</a>
             </td>
         </tr>
 }
